# aethmodular

./: .gitignore  AGENTS.md  ENHANCED_MIGRATION_GUIDE.md  Four_Sites_FTIR_data.v2.csv  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PKL_INTEGRATION_SUMMARY.md  README.md  VISUALIZATION_TEMPLATES_IMPLEMENTATION.md  check_etad_data.py  check_matching_statistics.py  compare_pkl_files.py  create_9am_resampled_datasets.py  environment.yml  get_etad_stats.py  inspect_flow_columns.py  integration_example.py  package-lock.json  package.json  plotting_gaps_scenarios.ipynb  pyproject.toml  requirements.txt  setup.py  test-facebook-scraper.mjs  test_system.py
FTIR_HIPS_Chem/: Analysis_Tasks_Jan2025.ipynb  Countdata.ipynb  Crossplot_Summary_Stats.csv  ETAD Factor Contributions .csv  ETAD_Factor_Analysis.ipynb  Example.ipynb  Example_Modular_Analysis.ipynb  HIPS_Aeth_SmoothRaw_Analysis.ipynb  Multi_Site_Analysis copy.ipynb  Multi_Site_Analysis.ipynb  Multi_Site_Analysis_FollowUp.ipynb  Multi_Site_Analysis_Modular.ipynb  Raw_ATN_Correlation_Analysis.ipynb  Task_Analysis_Notebook.ipynb  addis_01_source_apportionment.ipynb  addis_01_source_apportionment_daily.ipynb  addis_02.5_temporal_patterns_filter.ipynb  addis_02_temporal_patterns.ipynb  addis_02_temporal_patterns_daily.ipynb  addis_03_meteorology.ipynb  addis_03_meteorology_daily.ipynb  addis_04_aeronet.ipynb  addis_04_aeronet_daily.ipynb  figure7_source_contributions.ipynb  follow_up_analysis.ipynb  source_apportionment_regression.ipynb  threshold_by_source_analysis.ipynb
Filter Combine/: FilterBased_ChemSpecPM25_CHTS.csv  FilterBased_ChemSpecPM25_INDH.csv  main.py  (+7 more)
(+650 files in other folders)
